# fastweb3

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
src/fastweb3/: __init__.py  chains.py  deferred.py  endpoint.py  env.py  errors.py  formatters.py  middleware.py  provider.py  rpc_pool.py  utils.py  validation.py  web3.py
src/fastweb3/provider/: __init__.py  endpoint_selection.py  execution.py  middleware.py  pool.py  provider.py  rpc_error_retry.py  types.py
src/fastweb3/transport/: __init__.py  base.py  factory.py  http.py  ipc.py  ws.py
src/fastweb3/web3/: __init__.py  eth.py  web3.py
src/fw3/: __init__.py  endpoint.py  env.py  errors.py  formatters.py  utils.py  validation.py
tests/integration/: conftest.py  test_provider_rpc_error_retry_integration.py  test_web3_e2e_httpx_integration.py
tests/unit/: test_chains.py  test_chains_maintainer.py  test_deferred.py  test_deferred_races.py  test_endpoint.py  test_endpoint_batch_input_validation.py  test_env.py  test_formatters.py  test_middlewares.py  test_provider.py  test_provider_batch.py  test_provider_freshness.py  test_provider_hedging.py  test_provider_middlewares.py  test_provider_pool_selection.py  test_provider_pool_size.py  test_provider_rpc_error_batch_retry.py  test_provider_rpc_error_retry_decision.py  test_provider_rpc_error_tip_pinning.py  test_rpc_pool.py  test_utils.py  test_validation.py  test_web3.py  test_web3_batching.py  test_web3_env_integration.py  test_web3_freshness.py  test_web3_init.py  test_web3_pool_config.py
(+19 files in other folders)
